contrast fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -107,12 +107,21 @@ button:hover {
 
 
 .hero {
-  background: linear-gradient(120deg, #2F6AD3, #FF588F, #e2e2e2, #f8f8f8, #c5c5c5);
-  background-size: 300% 300%;
-  animation: gradientAnimation 10s ease infinite;
+  position: relative;
+  overflow: hidden;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0 1rem;
+  color: #ffffff;
+  background: linear-gradient(135deg, #2F6AD3, #FF588F, #e2e2e2, #f8f8f8);
+  background-size: 200% 200%;
+  animation: backgroundShift 15s ease infinite;
 }
 
-@keyframes gradientAnimation {
+@keyframes backgroundShift {
   0% {
     background-position: 0% 50%;
   }
@@ -122,4 +131,17 @@ button:hover {
   100% {
     background-position: 0% 50%;
   }
+}
+
+
+.text-contrast-filter {
+  color: #ffffff; /* Cor do texto */
+  filter: contrast(150%); /* Aumenta o contraste em 150% */
+}
+
+.text-contrast {
+  color: #ffffff; /* Cor do texto */
+  text-shadow: 
+    2px 2px 2px rgba(0, 0, 0, 0.1), /* Sombra escura para contraste */
+   -2px -2px 2px rgba(0, 0, 0, 0.1); /* Sombra escura para contraste */
 }
